--- a/index.html
+++ b/index.html
@@ -118,54 +118,57 @@
         <div id="pokemonList" class="loading">Loading Pokémon...</div>
     </div>
     <script>
-        const apiUrl = 'https://subarna00-pokemon.hf.space/api/v1/pokemons/all';
+const apiUrl = 'https://subarna00-pokemon.hf.space/api/v1/pokemons/all';
 
-        async function fetchPokemons() {
-            const nameFilter = document.getElementById('searchName').value;
-            const typeFilter = document.getElementById('filterType').value;
-            const url = new URL(apiUrl);
+async function fetchPokemons() {
+    const nameFilter = document.getElementById('searchName').value.trim();
+    const typeFilter = document.getElementById('filterType').value.trim();
+    const url = new URL(apiUrl);
 
-            if (nameFilter) {
-                url.searchParams.append('name', nameFilter);
-            }
-            if (typeFilter) {
-                url.searchParams.append('type', typeFilter);
-            }
+    // Append search parameters if provided
+    if (nameFilter) {
+        url.searchParams.append('name', nameFilter);
+    }
+    // Append type filter if provided
+    if (typeFilter) {
+        url.searchParams.append('type', typeFilter);
+    }
 
-            try {
-                const response = await fetch(url);
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status}`);
-                }
-                const pokemons = await response.json();
-                displayPokemons(pokemons);
-            } catch (error) {
-                document.getElementById('pokemonList').innerHTML = `Error fetching Pokémon data: ${error.message}`;
-                console.error('Error fetching Pokémon data:', error);
-            }
+    try {
+        const response = await fetch(url);
+        if (!response.ok) {
+            throw new Error(`HTTP error! Status: ${response.status}`);
         }
+        const pokemons = await response.json();
+        displayPokemons(pokemons);
+    } catch (error) {
+        document.getElementById('pokemonList').innerHTML = `Error fetching Pokémon data: ${error.message}`;
+        console.error('Error fetching Pokémon data:', error);
+    }
+}
 
-        function displayPokemons(pokemons) {
-            const pokemonList = document.getElementById('pokemonList');
-            pokemonList.innerHTML = '';
-            if (pokemons.length === 0) {
-                pokemonList.innerHTML = 'No Pokémon found.';
-                return;
-            }
-            pokemons.forEach(pokemon => {
-                const card = document.createElement('div');
-                card.className = 'pokemon-card';
-                card.innerHTML = `
-                    <img src="${pokemon.image}" alt="${pokemon.name}" class="pokemon-image" />
-                    <h3>${pokemon.name}</h3>
-                    <p>Types: ${pokemon.types.join(', ')}</p>
-                `;
-                pokemonList.appendChild(card);
-            });
-        }
+function displayPokemons(pokemons) {
+    const pokemonList = document.getElementById('pokemonList');
+    pokemonList.innerHTML = '';
+    if (pokemons.length === 0) {
+        pokemonList.innerHTML = 'No Pokémon found.';
+        return;
+    }
+    pokemons.forEach(pokemon => {
+        const card = document.createElement('div');
+        card.className = 'pokemon-card';
+        card.innerHTML = `
+            <img src="${pokemon.image}" alt="${pokemon.name}" class="pokemon-image" />
+            <h3>${pokemon.name}</h3>
+            <p>Types: ${pokemon.types.join(', ')}</p>
+        `;
+        pokemonList.appendChild(card);
+    });
+}
 
-        // Initial load
-        fetchPokemons();
+// Initial load
+fetchPokemons();
+
     </script>
 </body>
 </html>
