--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div id="pokemonList" class="loading">Loading Pokémon...</div>
     </div>
     <script>
-const apiUrl = 'https://subarna00-pokemon.hf.space/api/v1/pokemons/all';
+const apiUrl = 'https://subarna00-pokemon.hf.space/api/v1/pokemons';
 
 async function fetchPokemons(nameFilter = '', typeFilter = '') {
     const url = new URL(apiUrl);
